unpackaged/main/default/objects/Collector_Logs__c/Collector_Logs__c.object-meta.xml
<CustomObject>
    <label>Collector Log</label>
    <nameField>
        <displayFormat>CL - {00000}</displayFormat>
        <label>Log Ref No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collector Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>