unpackaged/main/default/objects/Collector_Logs__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Collector Logs</relationshipLabel>
    <relationshipName>Collector_Logs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>