unpackaged/main/default/objects/Collector_Logs__c/fields/Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_No__c</fullName>
    <formula>Customer_Name__r.AccountNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer No.</label>
    <type>Text</type>
</CustomField>