unpackaged/main/default/objects/Collector_Logs__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <formula>Disposition_Code__r.Remark__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remark</label>
    <type>Text</type>
</CustomField>